updated homepage playgame margin on moblile as well as removing scrollbars, added new shortcode for vertical spacing, resolved display on higher eduction page

--- a/app/assets/sass/newStyles.scss
+++ b/app/assets/sass/newStyles.scss
@@ -810,13 +810,13 @@ ul.homePageList {
 
 .bg-transparent .container-fluid{
     background-color: transparent;
-    padding: 0;
+    // padding: 0;
 }
 
-.container-fluid{
-    padding: 0!important;
-    // background-color: #fff;
-}
+// .container-fluid{
+//     padding: 0!important;
+//     // background-color: #fff;
+// }
 
 .desktopRight{
     float: none;
