--- a/app/onServer/server/css/scss/_bscore_custom.scss
+++ b/app/onServer/server/css/scss/_bscore_custom.scss
@@ -13649,11 +13649,6 @@ ul.homePageList {
 
 .bg-transparent .container-fluid, .bg-transparent .container-sm, .bg-transparent .container-md, .bg-transparent .container-lg, .bg-transparent .container-xl, .bg-transparent .container-xxl {
   background-color: transparent;
-  padding: 0;
-}
-
-.container-fluid, .container-sm, .container-md, .container-lg, .container-xl, .container-xxl {
-  padding: 0 !important;
 }
 
 .desktopRight {
